# stockotter_small

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_issues.sh
config/: config.example.yaml
data/: ticker_map.json
data/llm_eval/: kr_finance_eval_samples.json  p1_1_subset.json
docs/: CODEX_RULES.md
src/stockotter_small/: __init__.py  __main__.py  cli.py
src/stockotter_small/broker/: __init__.py
src/stockotter_small/news/: __init__.py  google_utils.py  noise_filter.py  ticker_mapper.py
src/stockotter_small/telegram/: __init__.py  briefing.py  client.py  interactive.py
src/stockotter_v2/: __init__.py  config.py  schemas.py
src/stockotter_v2/clusterer/: __init__.py  tfidf_clusterer.py
src/stockotter_v2/llm/: __init__.py  eval_harness.py  gemini_client.py  (+3 more)
tests/: test_clusterer.py  test_gemini_client.py  test_google_utils.py  test_kis_cli.py  test_kis_client.py  test_kis_token_manager.py  test_llm_eval_cli.py  test_llm_eval_metrics.py  test_llm_postprocess.py  test_llm_prompt_regression.py  test_llm_structurer.py  test_news_fetcher.py  test_news_parser.py  test_noise_filter.py  test_order_service.py  test_paper_trading.py  test_pipeline_run.py  test_schemas.py  test_scoring.py  test_smoke.py  test_storage.py  test_telegram.py  test_ticker_mapper.py  test_universe_filter.py
tests/fixtures/: candidate.sample.json  kr_snapshot.sample.csv  naver_news_article.sample.html  naver_news_article.summary_only.sample.html  naver_news_list.sample.html  news_item.sample.json  rss_feed.sample.xml
(+22 files in other folders)
